Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -111,7 +111,7 @@
     "approve-document": "Aprobar documento",
     "approve-document-same-date": "Aprobar documento en la misma fecha",
     "approved": "Aprobado",
-    "april": "Abril",
+    "april": "Duben",
     "are-you-sure": "Esto no se puede deshacer. ¿Está seguro que desea continuar?",
     "are-you-sure-action": "Esta acción necesita confirmación. ¿Está seguro de que desea continuar?",
     "asset": "Activo",
@@ -126,14 +126,14 @@
     "attribute-values": "Valores de atributo",
     "attributes": "Atributos",
     "audio": "Audio",
-    "august": "Agosto",
+    "august": "Srpen",
     "auth-token-invalid": "Clave de API no válida",
     "authentication": "Autenticación",
     "auto": "Auto",
     "auto-apply-to": "Aplicar automáticamente a",
     "automatic": "Automático",
     "available": "Disponible",
-    "average": "Media",
+    "average": "Průměr",
     "average-cost": "Precio medio",
     "average-purchase-price": "Precio medio de compra",
     "back": "Volver",
@@ -151,7 +151,7 @@
     "bank-accounts": "Cuentas bancarias",
     "bank-mandate": "Mandato",
     "bank-mandate-date": "Fecha Mandato",
-    "banking-movements": "Movimientos bancarios",
+    "banking-movements": "Bankovní pohyby",
     "barcode": "Código de barras",
     "bcc": "CCO",
     "big": "Grande",
@@ -166,22 +166,22 @@
     "book": "Reservar",
     "box-closed-ok": "Caja cerrada correctamente",
     "boxes": "Cajas",
-    "browse": "Examinar",
+    "browse": "Procházet",
     "business-name": "Razón Social",
     "buy": "Comprar",
     "cache": "Caché",
     "cache-dir": "Carpeta de cache '%folderName%'",
     "calculate": "Calcular",
-    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
-    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
-    "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
+    "calculated-net-diff": "Při výpočtu netového rozdílu. %net% VS %net2%",
+    "calculated-surcharge-diff": "Při výpočtu rozdílu příplatek. %surcharge% VS %surcharge2%",
+    "calculated-tax-diff": "Při výpočtu rozdílu daně. %tax% VS %tax2%",
     "calculation": "Cálculo",
     "calendar": "Calendario",
     "can-not-open-zip-file": "No puedo abrir archivo zip '%zipFile%'",
     "cancel": "Cancelar",
     "cancel-data": "Cancelar cambios u operación",
     "cancelled": "Cancelado",
-    "cannot-generate-accounting-entry": "Error al generar el asiento de la factura %invoice%",
+    "cannot-generate-accounting-entry": "Chyba při generování účetní položky faktury %invoice%",
     "cant-assign-date-already-regularized": "No se puede asignar la fecha %date% porque ya hay una regularización de %tax% para ese periodo.",
     "cant-assing-subaccount-supplier": "Imposible asociar la subcuenta para el proveedor %supplierCode%",
     "cant-associate-customer-subaccount": "Imposible asociar la subcuenta para el cliente %customerCode%",
