--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -127,7 +127,7 @@
     "attributes": "Attribute",
     "audio": "Audio",
     "august": "Agosto",
-    "auth-token-invalid": "Calve de API no válida",
+    "auth-token-invalid": "Clave de API no válida",
     "authentication": "Authentifizierung",
     "auto": "Auto",
     "auto-apply-to": "Automatisch anwenden auf",
