--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -502,7 +502,7 @@
     "email-not-configured": "Email not configured. You can configure email from the administrator menu, control panel, application preferences.",
     "email-not-sent": "Not sent",
     "email-notification": "Email notification",
-    "email-notification-disabled": "La notificación de email %name% está desactivada",
+    "email-notification-disabled": "The email notification %name% is disabled",
     "email-notification-not-exists": "Email notification %name% not found",
     "email-replies": "Email replies",
     "email-replies-to": "Replies to this email will go to %email%",
@@ -521,7 +521,7 @@
     "enable-api": "Enable API",
     "enable-updates-beta": "Enable beta updates",
     "enabled": "Enabled",
-    "enabled-plugins": "Plugins activos",
+    "enabled-plugins": "Active plugins",
     "encrypt": "Encrypt",
     "end-date": "End date",
     "end-time": "End time",
