--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -201,11 +201,11 @@
     "cant-delete-default-tax": "Ezin da zerga lehenetsia ezabatu",
     "cant-delete-default-warehouse": "Ezin da biltegi lehenetsia ezabatu",
     "cant-delete-last-user": "Ezin da azkenengo erabiltzailea ezabatu",
-    "cant-delete-variant-with-documents": "No se puede eliminar el producto o variante %reference% porque ya ha sido comprado o vendido. Pero puede bloquearlo si lo desea.",
+    "cant-delete-variant-with-documents": "Ezin da %reference% produktua edo aldaketaren ezabatu dokumentuekin erosita edo salduta izan delako. Blokeatu dezakezu baina.",
     "cant-load-controller": "Ezin da  '%controllerName%' kontroladorea kargatu.",
     "cant-modify-reference": "Ezin da erreferentzia aldatu.",
     "cant-remove-accounting-entry": "Ezin da idazpena ezabatu",
-    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
+    "cant-remove-invoice-refund": "Ezin da faktura kendu jadanik itzulgarriarekin",
     "cant-remove-receipt": "Ezin da ordainagiria ezabatu",
     "cant-update-audit-log": "Ezin da aldatu auditoria-erregistro bat",
     "card": "Txartela",
@@ -221,7 +221,7 @@
     "charge-date": "Kobratzeko data",
     "chart": "Grafikoa",
     "charts": "Irudikapenak",
-    "chat": "Chat",
+    "chat": "Txat",
     "check-table": "Errorea '%tableName%' taula egiaztatzean",
     "check-vies": "VIES egiaztatu",
     "checked": "Egiaztatua",
@@ -230,7 +230,7 @@
     "choose-currency": "Aukeratu txanpona",
     "choose-doc-type": "Aukeratu dokumentu mota",
     "choose-employee": "Aukeratu langilea",
-    "choose-files": "Seleccionar archivos",
+    "choose-files": "Aukeratu fitxategiak",
     "choose-payment-method": "Aukeratu ordainketa mota",
     "choose-serie": "Aukeratu seriea",
     "choose-source": "Jatorria aukeratu",
@@ -280,7 +280,7 @@
     "company-commission-info": "Aukeratutako enpresari bakarrik aplikatuko zaio",
     "company-manager": "Enpresa kudeatzailea",
     "company-name": "Enpresaren izena",
-    "company-warehouse": "Empresa\/Almacén",
+    "company-warehouse": "Enpresa\/Gordailua",
     "comparative": "Konparatiboa",
     "compared": "Konparatuta",
     "compatible": "Bateragarria",
