--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -166,22 +166,22 @@
     "book": "Réserve",
     "box-closed-ok": "Boîte fermée correctement",
     "boxes": "Boîtes",
-    "browse": "Examinar",
+    "browse": "Parcourir",
     "business-name": "Nom de l'entreprise",
     "buy": "Acheter",
     "cache": "Cache",
     "cache-dir": "Cache répertoire '%folderName%'",
     "calculate": "Calculer",
-    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
-    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
-    "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
+    "calculated-net-diff": "Différence trouvée en calculant le net. %net% VS %net2%",
+    "calculated-surcharge-diff": "Différence trouvée en calculant le supplément de surcharge. %surcharge% VS %surcharge2%",
+    "calculated-tax-diff": "Différence trouvée en calculant le total de la TVA. %tax% VS %tax2%",
     "calculation": "Calcul",
     "calendar": "Calendrier",
     "can-not-open-zip-file": "Impossible d'ouvrir le fichier zip '%zipFile%'",
     "cancel": "Annuler",
     "cancel-data": "Annuler les modifications ou l'opération",
     "cancelled": "Annulé",
-    "cannot-generate-accounting-entry": "Error al generar el asiento de la factura %invoice%",
+    "cannot-generate-accounting-entry": "Erreur lors de la génération de l'écriture comptable de la facture %invoice%",
     "cant-assign-date-already-regularized": "Vous ne pouvez pas attribuer la date %date% car il y a déjà une régularisation de %tax% pour cette période.",
     "cant-assing-subaccount-supplier": "Impossible d'associer le sous-compte au fournisseur %supplierCode%",
     "cant-associate-customer-subaccount": "Impossible d'associer le sous-compte au client %customerCode%",
