--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -121,23 +121,23 @@
     "attribute": "Attributo",
     "attribute-value-1": "Attribute value 1",
     "attribute-value-2": "Attribute value 2",
-    "attribute-value-3": "attribute-value-3",
-    "attribute-value-4": "attribute-value-4",
+    "attribute-value-3": "valore attributo 3",
+    "attribute-value-4": "valore attributo 4",
     "attribute-values": "Attribute values",
     "attributes": "attributi",
     "audio": "Audio",
     "august": "Agosto",
-    "auth-token-invalid": "Calve de API no válida",
-    "authentication": "authentication",
+    "auth-token-invalid": "Token di autenticazione non valido",
+    "authentication": "autenticazione",
     "auto": "Auto",
     "auto-apply-to": "auto-apply-to",
-    "automatic": "Automático",
+    "automatic": "Automatico",
     "available": "A disposizione",
     "average": "Metà",
     "average-cost": "Costo medio",
-    "average-purchase-price": "average-purchase-price",
+    "average-purchase-price": "prezzo medio di acquisto",
     "back": "Volver",
-    "background-color": "Color de fondo",
+    "background-color": "Colore di sfondo",
     "background-overlay": "Color de fondo superpuesto (overlay)",
     "badge": "Distintivo",
     "balance": "Equilibrio",
@@ -149,9 +149,9 @@
     "balances": "Balances",
     "bank-account": "Conto bancario",
     "bank-accounts": "conto in banca",
-    "bank-mandate": "bank-mandate",
-    "bank-mandate-date": "Data obbligatoria",
-    "banking-movements": "Movimientos bancarios",
+    "bank-mandate": "mandato bancario",
+    "bank-mandate-date": "Data mandato bancario",
+    "banking-movements": "Movimenti bancari",
     "barcode": "Codice a barre",
     "bcc": "BCC",
     "big": "big",
