--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -324,7 +324,7 @@
     "counterpart": "Contrapartida",
     "countries": "Países",
     "country": "País",
-    "country-not-in-eu": "El %codiso% no pertenece a ningún país de la unión Europea",
+    "country-not-in-eu": "%codiso% nie należy do żadnego kraju Unii Europejskiej",
     "create": "Crear",
     "create-accounting-entry": "Crear Asiento Contable",
     "create-delivery-note": "Crear albarán",
@@ -340,7 +340,7 @@
     "crons": "Crons",
     "currency": "Divisa",
     "currency-position": "Posición símbolo de divisa",
-    "current-quarter": "Trimestre actual",
+    "current-quarter": "Bieżący kwartał",
     "current-risk": "Riesgo actual",
     "customer": "Cliente",
     "customer-account-not-found": "Subcuenta del cliente no encontrada",
@@ -374,7 +374,7 @@
     "dashboard-for": "Tablero de %company%",
     "data-source": "Datos de origen",
     "database": "Base de datos",
-    "database-error": "Error al conectar a la base de datos",
+    "database-error": "Błąd połączenia z bazą danych",
     "database-name-must-be-lowercase": "El nombre de la base de datos debe ser en minúsculas",
     "date": "Fecha",
     "date-in": "Fecha entrada",
@@ -386,7 +386,7 @@
     "dateentry-wildcard-info": "Fecha indicada en la cabecera del asiento contable",
     "day": "Día",
     "days": "Días",
-    "days-log-retention": "Nº días retención logs",
+    "days-log-retention": "Liczba dni retencji logów",
     "days-until-expiration": "Días hasta vencimiento",
     "db-host": "Host base de datos",
     "db-name": "Nombre de base de datos",
@@ -413,10 +413,10 @@
     "delete-closing": "Eliminar asientos de cierre",
     "delete-data": "Borrar datos",
     "delete-file": "Eliminar archivo",
-    "delete-logs": "Eliminar historial",
+    "delete-logs": "Usuń historię",
     "delete-opening": "Eliminar el asiento de apertura",
     "delete-record": "Eliminar registro",
-    "Deleted": "Eliminado",
+    "Deleted": "Usunięto",
     "deleted-model": "Eliminado %model% (%key%) %desc%",
     "delivery-note": "Albarán",
     "delivery-note-email-subject": "Su albarán %code%",
