--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -107,7 +107,7 @@
     "app-preferences": "Preferências da aplicação",
     "applied-tax": "imposto aplicado",
     "apply": "Aplicar",
-    "approve": "Aprobar",
+    "approve": "Aprovar",
     "approve-document": "aprovar documento",
     "approve-document-same-date": "Aprovar documento na mesma data",
     "approved": "Aprovado",
@@ -115,13 +115,13 @@
     "are-you-sure": "Isto não pode ser desfeito. Tem certeza que deseja continuar?",
     "are-you-sure-action": "você tem certeza",
     "asset": "Ativo",
-    "assigned": "Asignado",
+    "assigned": "Atribuído",
     "attached-file": "Arquivo anexo",
     "attached-files": "Arquivos anexados",
     "attribute": "Atributo",
     "attribute-value-1": "Valor 1 da variante do produto",
     "attribute-value-2": "Valor 2 da variante do producto",
-    "attribute-value-3": "attribute-value-3",
+    "attribute-value-3": "valor-do-atributo-3",
     "attribute-value-4": "attribute-value-4",
     "attribute-values": "Valor do atributo",
     "attributes": "Atributos",
