--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -88,12 +88,12 @@
     "allow-sale-without-stock": "Permitir venda sem estoque",
     "allow-sale-without-stock-n": "Permitir venda sem estoque nos novos produtos",
     "allow-update": "Permitir MODIFICAR",
-    "always-to-company-email": "Siempre al email de la empresa",
+    "always-to-company-email": "Sempre para o email da empresa",
     "amount": "Montante",
     "amount-without-discount": "Preço sem desconto",
-    "and": "and",
+    "and": "e",
     "any": "Qualquer",
-    "any-group": "Cualquier grupo",
+    "any-group": "Qualquer grupo",
     "apache-module-not-found": "Módulo de apache não encontrado: %module%",
     "apc-clear": "APC limpo.",
     "apc-delete-key-item": "Elemento excluído '0' da APC.",
@@ -103,7 +103,7 @@
     "api-disabled": "API desativada",
     "api-key": "API key",
     "api-keys": "API Keys",
-    "api-version-not-found": "Versión de API no encontrada",
+    "api-version-not-found": "Versão da API não encontrada",
     "app-preferences": "Preferências da aplicação",
     "applied-tax": "Imposto aplicado",
     "apply": "Aplicar",
