--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -181,7 +181,7 @@
     "cancel": "Cancelar",
     "cancel-data": "Cancelar els canvis o l'operació",
     "cancelled": "Cancel·lat",
-    "cannot-generate-accounting-entry": "Error al generar el asiento de la factura %invoice%",
+    "cannot-generate-accounting-entry": "Error en generar el asentament de la factura %invoice%",
     "cant-assign-date-already-regularized": "No pots assignar la data %date% perque ya n'hi ha una regularisació %tax% per ad eixe periodo.",
     "cant-assing-subaccount-supplier": "No es pot associar el subconte per al proveïdor %supplierCode%",
     "cant-associate-customer-subaccount": "No es pot assignar el subconte per al client %customerCode%",
@@ -201,11 +201,11 @@
     "cant-delete-default-tax": "No es pot borrar l'impost predeterminat",
     "cant-delete-default-warehouse": "No es pot borrar l'almagasén predeterminant",
     "cant-delete-last-user": "No es pot eliminar a l'últim usuari",
-    "cant-delete-variant-with-documents": "No se puede eliminar el producto o variante %reference% porque ya ha sido comprado o vendido. Pero puede bloquearlo si lo desea.",
+    "cant-delete-variant-with-documents": "No es pot eliminar el producte o variant %reference% perquè ja ha sigut comprat o venut. Però podeu bloquejar-ho si ho desitgeu.",
     "cant-load-controller": "No es pot carregar el controlador '%controllerName%'.",
     "cant-modify-reference": "No es pot modificar la referència.",
     "cant-remove-accounting-entry": "No es pot eliminar l'assentament",
-    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
+    "cant-remove-invoice-refund": "No es pot eliminar una factura que ja té rectificativa (devolució)",
     "cant-remove-receipt": "No es pot eliminar el rebut",
     "cant-update-audit-log": "No es pot modificar un registre d'auditoria",
     "card": "Targeta",
@@ -221,7 +221,7 @@
     "charge-date": "Data de càrrec",
     "chart": "Gràfic",
     "charts": "Gràfiques",
-    "chat": "Chat",
+    "chat": "Xat",
     "check-table": "Erro al comprovar la taula '%tableName%'",
     "check-vies": "Comprobar VIES",
     "checked": "Comprovat",
@@ -230,7 +230,7 @@
     "choose-currency": "Selecciona la moneda",
     "choose-doc-type": "Seleccionar el tipo de document",
     "choose-employee": "Selecciona l'empleat",
-    "choose-files": "Seleccionar archivos",
+    "choose-files": "Seleccionar arxius",
     "choose-payment-method": "Selecciona la forma de pagament",
     "choose-serie": "Selecciona la série",
     "choose-source": "Selecciona l'orige",
@@ -249,7 +249,7 @@
     "closing-accounting-completed": "Procés de tancament comptable completat correctament",
     "closing-closing-concept": "Assentament de tancament de l'exercici %exercise%",
     "closing-opening-concept": "Assentament d'obertura de ĺ'exercici %exercise%",
-    "closing-operation": "Cierre",
+    "closing-operation": "Tancament",
     "closing-regularization-concept": "Assentament de regularització de l'exercici %exercise%",
     "codbarras": "Còdic de barres",
     "code": "Codi",
